feat: 添加 simpleIngress 更新接口
