# router/api/v1/k8s/k8s.go
@@ -40,7 +40,7 @@ func RegisterRoute(r *gin.RouterGroup) {
 		ingress.GET("/:namespace", k8singress.GetIngressList)
 		ingress.GET("/:namespace/:ingressName", k8singress.GetIngressByName)
 		ingress.POST("/", k8singress.CreateSimpleIngress)
-
+		ingress.PUT("/", k8singress.UpdateSimpleIngress)
 	}
 
 }
